[tool.poetry]
name = "pyshiftlearn"
version = "0.1.0"
description = "Deep Cost-Sensitive Learning Towards Data-shift and Imbalanced-Learning"
authors = ["metaboulie <eugeneheiner14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
torch = "^2.1.1"
anndata = "^0.10.3"
scipy = "^1.11.4"
numpy = "^1.26.2"
imbalanced-learn = "^0.11.0"
deepdiff = "^6.7.1"
tqdm = "^4.66.1"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
torcheval = "^0.0.7"
dash = "^2.14.1"
plotly = "^5.18.0"
pytest = "^7.4.3"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
